# axiom

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  grub.cfg  k_build.sh  limine.cfg
AXUtil/: Assert.h  Bitmap.h  Helpers.h  List.h  Lock.h  Optional.h  Spinlock.h  Std.h  StdExtras.h  Types.h  Vector.h  malloc.cpp  malloc.h  types.h
Kernel/: CMakeLists.txt  IO.h  KResult.h  Std.cpp  Std.h  bootloader.cc  bootloader.hh  k_debug.cpp  k_debug.h  k_init.cpp  k_start.cc  k_start.cpp  k_stdio.h  linker.ld
Kernel/Arch/: CPU.h
Kernel/Arch/x86_64/: CPU.cpp  DescriptorTablePointer.h  RTC.cpp  RegisterState.h  TrapFrame.h
Kernel/Arch/x86_64/Boot/: boot.cpp  boot.h  boot_stivale.cpp  boot_stivale.h
Kernel/Arch/x86_64/GDT/: GDT.cpp  GDT.h  load_gdt.S
Kernel/Arch/x86_64/IDT/: IDT.h
Kernel/Arch/x86_64/Interrupts/: IDT.cpp  IDT.h  interrupts.S  interrupts.cpp  interrupts.h  load_idt.S
Kernel/Boot/: multiboot2.h  multiboot2_defs.h
Kernel/Boot/x86_64/: boot.S  control_register.h  gdt.h  memory.h  msr.h
Kernel/Graphics/: VGATextModeDevice.cpp  VGATextModeDevice.h
Kernel/Memory/: BootloaderMemoryMap.cpp  BootloaderMemoryMap.h  ContiguousPhysicalRange.h  MemoryManager.cpp  MemoryManager.h  PageTable.h  PhysicalAddress.h  PhysicalRange.h  bootloader_memory_map.cpp  bootloader_memory_map.h  memory_manager.cpp  physical_region.h
Kernel/Memory/Heap/: Heap.h  KernelHeap.h  k_malloc.cpp  k_malloc.h
Kernel/Temporary/: DebugTextConsole.h
Toolchain/: build_toolchain.sh  clean.sh
ax_util/: assert.hh  bitmap.hh  helpers.hh  list.hh  lock.hh  malloc.cc  malloc.hh  queue.hh  result.hh  types.hh
bernel/: IO.h  k_debug.h  k_start.cpp  linker.ld
bernel/BMemory/: memory_manager.h  physical_range.h
ignis/: README.md
kernel/: CMakeLists.txt  io.hh  k_debug.cc  k_debug.cpp  k_debug.hh  k_start.cc  panic.cc  panic.hh  std.cc  std.cpp  std.hh
kernel/arch/: RTC.h  cpu.hh  init.hh  interrupts.hh  pic.hh  processor.hh  register_state.hh
kernel/arch/RISC-V/: README.md
kernel/arch/amd64/: asm.hh  asm_util.S  asm_util.hh  asm_utils.cc  asm_utils.hh  cpu.cc  descriptor_table_pointer.hh  init.cc  msr.hh  paging.cc  paging.hh  paging_utils.S  processor.cc  register_state.hh  rtc.cc
kernel/arch/amd64/BGDT/: gdt.cc
kernel/arch/amd64/boot/: boot_stivale.cc  boot_stivale.hh  load_gdt.S  tables.cc  tables.hh
kernel/arch/amd64/gdt/: gdt.cc  gdt.hh
kernel/arch/amd64/interrupts/: idt.cc  idt.hh  interrupt_disabler.hh  interrupts.S  interrupts.cc  interrupts.hh  pic.cc  pic.hh
kernel/arch/x86_64/GDT/: GDT.cpp
kernel/arch/x86_64/boot/: boot_stivale.cpp  boot_stivale.h
kernel/memory/: bootloader_memory_map.cc  bootloader_memory_map.hh  memory.hh  memory_manager.cc  memory_manager.hh  paging.cc  paging.hh  physical.cc  physical.hh  physical_address.h  physical_address.hh  physical_range.hh  physical_region.hh  region.cc  region.hh
kernel/memory/heap/: heap.h  heap.hh  k_malloc.cc  k_malloc.h  k_malloc.hh
kernel/system/early_console/: early_console.cc  early_console.hh
kernel/system/scheduler/: context.cc  context.hh  proccess.hh  scheduler.cc  scheduler.hh  thread.cc  thread.hh
kernel/temporary/: DebugTextConsole.cpp  debug_text_console.cc  debug_text_console.hh
kernel/time/: pit.cc  pit.hh
libs/ax/: assert.hh  bitmap.hh  helpers.hh  list.hh  lock.hh  queue.hh  types.hh
toolchain/: build_toolchain.sh  clean.sh
userspace/: README.md
